new arabic words

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
   {"tense1": "Falaise", "tense2": "جُرْف / جُرُوف / جُرْفَان / جُرُوفًا / جُرْفَيْن", "type": "word"},
   {"tense1": "Deux parties", "tense2": "جُزْءَان", "type": "word"},
   {"tense1": "Une cave cachée", "tense2": "كَهْف مَخْفِيّ", "type": "sentence"},
-  {"tense1": "Accéder à", "tense2": "وَصَلَ إِلَى / يَصِلُ إِلَى / وُصُول / صِلْ إِلَى / يُوصَلُ إِلَى / وُصِلَ إِلَى", "type": "verb"},
+  {"tense1": "Arriver", "tense2": "وَصَلَ إِلَى / يَصِلُ إِلَى / وُصُول / صِلْ إِلَى / يُوصَلُ إِلَى / وُصِلَ إِلَى", "type": "verb"},
   {"tense1": "L'eau est empoisonnée", "tense2": "المَاء مَسْمُوم", "type": "sentence"},
   {"tense1": "Douleur intense", "tense2": "أَلَم شَدِيد", "type": "sentence"},
   {"tense1": "Ordonner", "tense2": "أَمَرَ / يَأْمُرُ / أَمْر / مُرْ / يُؤْمَرُ / أُمِرَ", "type": "verb"},
@@ -908,7 +908,7 @@
   {"tense1": "Paniquer", "tense2": "ذَعَرَ / يَذْعَرُ / ذُعْر / اِذْعَرْ / يُذْعَرُ / ذُعِرَ", "type": "verb"},
   {"tense1": "Se répandre", "tense2": "انْتَشَرَ / يَنْتَشِرُ / انْتِشَار / اِنْتَشِرْ / يُنْتَشَرُ / اُنْتُشِرَ", "type": "verb"},
   {"tense1": "Voie/moyen", "tense2": "سَبِيل / سُبُل / سَبِيلَان / سُبُلاً / سَبِيلَيْنِ", "type": "word"},
-  {"tense1": "Prendre des précautions", "tense2": "احْتَاطَ / يَحْتَاطُ / احْتِيَاط / اِحْتَطْ / يُحْتَاطُ / اُحْتِيطَ", "type": "verb"},
+  {"tense1": "Prendre des précautions/se méfier", "tense2": "احْتَاطَ / يَحْتَاطُ / احْتِيَاط / اِحْتَطْ / يُحْتَاطُ / اُحْتِيطَ", "type": "verb"},
   {"tense1": "Développer", "tense2": "طَوَّرَ / يُطَوِّرُ / تَطْوِير / طَوِّرْ / يُطَوَّرُ / طُوِّرَ", "type": "verb"},
   {"tense1": "Rassurer", "tense2": "طَمْأَنَ / يُطَمْئِنُ / طَمْأَنَة / طَمْئِنْ / يُطَمْأَنُ / طُمْئِنَ", "type": "verb"},
   {"tense1": "S'excuser", "tense2": "اعْتَذَرَ / يَعْتَذِرُ / اعْتِذَار / اِعْتَذِرْ / يُعْتَذَرُ / اُعْتُذِرَ", "type": "verb"},
@@ -928,7 +928,36 @@
   {"tense1": "Aplaudir", "tense2": "صَفَّقَ / يُصَفِّقُ / تَصْفِيق / صَفِّقْ / يُصَفَّقُ / صُفِّقَ", "type": "verb"},
   {"tense1": "Touriste", "tense2": "سَائِح / سُيَّاح / سَائِحَان / سُيَّاحاً / سَائِحَيْنِ", "type": "word"},
   {"tense1": "Affaire", "tense2": "أَغْرَاض / أَغْرَاض / غَرَضَان / أَغْرَاضاً / غَرَضَيْنِ", "type": "word"},
-  {"tense1": "Surveiller", "tense2": "رَاقَبَ / يُرَاقِبُ / مُرَاقَبَة / رَاقِبْ / يُرَاقَبُ / رُوقِبَ", "type": "verb"}
+  {"tense1": "Surveiller", "tense2": "رَاقَبَ / يُرَاقِبُ / مُرَاقَبَة / رَاقِبْ / يُرَاقَبُ / رُوقِبَ", "type": "verb"},
+  {"tense1": "Phénomène", "tense2": "ظَاهِرَة / ظَوَاهِر / ظَاهِرَتَان / ظَوَاهِرَ / ظَاهِرَتَيْن", "type": "word"},
+  {"tense1": "Bouger", "tense2": "تَحَرَّكَ / يَتَحَرَّكُ / تَحَرُّك / تَحَرَّكْ / يُتَحَرَّكُ / تُحُرِّكَ", "type": "verb"},
+  {"tense1": "Tempête", "tense2": "عَاصِفَة / عَوَاصِف / عَاصِفَتَان / عَوَاصِفَ / عَاصِفَتَيْن", "type": "word"},
+  {"tense1": "Capital", "tense2": "عَاصِمَة / عَوَاصِم / عَاصِمَتَان / عَوَاصِمَ / عَاصِمَتَيْن", "type": "word"},
+  {"tense1": "Se maquiller", "tense2": "تَزَيَّنَ / يَتَزَيَّنُ / تَزَيُّن / تَزَيَّنْ / يُتَزَيَّنُ / تُزُيِّنَ", "type": "verb"},
+  {"tense1": "Coller", "tense2": "لَصَقَ / يَلْصَقُ / لَصْق / اِلْصَقْ / يُلْصَقُ / لُصِقَ", "type": "verb"},
+  {"tense1": "Salir", "tense2": "وَسَّخَ / يُوَسِّخُ / تَوْسِيخ / وَسِّخْ / يُوَسَّخُ / وُسِّخَ", "type": "verb"},
+  {"tense1": "Cuisiner", "tense2": "طَبَخَ / يَطْبُخُ / طَبْخ / اُطْبُخْ / يُطْبَخُ / طُبِخَ", "type": "verb"},
+  {"tense1": "Vêtement", "tense2": "ثَوْب / ثِيَاب / ثَوْبَان / ثِيَاباً / ثَوْبَيْن", "type": "word"},
+  {"tense1": "Fun", "tense2": "مُتْعَة / مُتَع / مُتْعَتَان / مُتَعاً / مُتْعَتَيْن", "type": "word"},
+  {"tense1": "Pate (masa)", "tense2": "عَجِينَة / عَجَائِن / عَجِينَتَان / عَجَائِنَ / عَجِينَتَيْن", "type": "word"},
+  {"tense1": "Graduarse", "tense2": "تَخَرَّجَ / يَتَخَرَّجُ / تَخَرُّج / تَخَرَّجْ / يُتَخَرَّجُ / تُخُرِّجَ", "type": "verb"},
+  {"tense1": "Blé", "tense2": "قَمْح / أَقْمَاح / قَمْحَان / أَقْمَاحاً / قَمْحَيْن", "type": "word"},
+  {"tense1": "Détruire", "tense2": "دَمَّرَ / يُدَمِّرُ / تَدْمِير / دَمِّرْ / يُدَمَّرُ / دُمِّرَ", "type": "verb"},
+  {"tense1": "Saison", "tense2": "مَوْسِم / مَوَاسِم / مَوْسِمَان / مَوَاسِمَ / مَوْسِمَيْن", "type": "word"},
+  {"tense1": "Inspecter", "tense2": "تَفَقَّدَ / يَتَفَقَّدُ / تَفَقُّد / تَفَقَّدْ / يُتَفَقَّدُ / تُفُقِّدَ", "type": "verb"},
+  {"tense1": "Inspirer (air)", "tense2": "شَهَقَ / يَشْهَقُ / شَهْق / اِشْهَقْ / يُشْهَقُ / شُهِقَ", "type": "verb"},
+  {"tense1": "Expirer", "tense2": "زَفَرَ / يَزْفِرُ / زَفْر / اِزْفِرْ / يُزْفَرُ / زُفِرَ", "type": "verb"},
+  {"tense1": "Accrocher", "tense2": "اِلْتَصَقَ / يَلْتَصِقُ / اِلْتِصَاق / اِلْتَصِقْ / يُلْتَصَقُ / اُلْتُصِقَ", "type": "verb"},
+  {"tense1": "Tirer (pull)", "tense2": "سَحَبَ / يَسْحَبُ / سَحْب / اِسْحَبْ / يُسْحَبُ / سُحِبَ", "type": "verb"},
+  {"tense1": "Justifier", "tense2": "بَرَّرَ / يُبَرِّرُ / تَبْرِير / بَرِّرْ / يُبَرَّرُ / بُرِّرَ", "type": "verb"},
+  {"tense1": "Roue", "tense2": "عَجَلَة / عَجَلَات / عَجَلَتَان / عَجَلَات / عَجَلَتَيْن", "type": "word"},
+  {"tense1": "Officiel", "tense2": "رَسْمِي / رَسْمِيُّون / رَسْمِيَّان / رَسْمِيِّين / رَسْمِيَّيْن", "type": "word"},
+  {"tense1": "Œil", "tense2": "عَيْن / عُيُون / عَيْنَان / عُيُوناً / عَيْنَيْن", "type": "word"},
+  {"tense1": "Chère", "tense2": "غَالِيَة / غَالِيَات / غَالِيَتَان / غَالِيَات / غَالِيَتَيْن", "type": "word"},
+  {"tense1": "Presse", "tense2": "صَحَافَة / صَحَافَات / صَحَافَتَان / صَحَافَات / صَحَافَتَيْن", "type": "word"},
+  {"tense1": "Journal", "tense2": "جَرِيدَة / جَرَائِد / جَرِيدَتَان / جَرَائِدَ / جَرِيدَتَيْن", "type": "word"},
+  {"tense1": "Goudron", "tense2": "قِير / قُيُور / قِيرَان / قُيُوراً / قِيرَيْن", "type": "word"},
+  {"tense1": "Refroidir", "tense2": "بَرَّدَ / يُبَرِّدُ / تَبْرِيد / بَرِّدْ / يُبَرَّدُ / بُرِّدَ", "type": "verb"}
 ]
         // French
         const pronouns_french = ["je", "tu", "il", "elle", "nous", "vous", "ils", "elles"];
