new arabic words

--- a/index.html
+++ b/index.html
@@ -957,7 +957,68 @@
   {"tense1": "Presse", "tense2": "صَحَافَة / صَحَافَات / صَحَافَتَان / صَحَافَات / صَحَافَتَيْن", "type": "word"},
   {"tense1": "Journal", "tense2": "جَرِيدَة / جَرَائِد / جَرِيدَتَان / جَرَائِدَ / جَرِيدَتَيْن", "type": "word"},
   {"tense1": "Goudron", "tense2": "قِير / قُيُور / قِيرَان / قُيُوراً / قِيرَيْن", "type": "word"},
-  {"tense1": "Refroidir", "tense2": "بَرَّدَ / يُبَرِّدُ / تَبْرِيد / بَرِّدْ / يُبَرَّدُ / بُرِّدَ", "type": "verb"}
+  {"tense1": "Refroidir", "tense2": "بَرَّدَ / يُبَرِّدُ / تَبْرِيد / بَرِّدْ / يُبَرَّدُ / بُرِّدَ", "type": "verb"},
+  {"tense1": "Ignorer", "tense2": "تَجَاهَلَ/يَتَجَاهَلُ/تَجَاهُل/تَجَاهَلْ/يُتَجَاهَلُ/تُجُوهِلَ", "type": "verb"},
+  {"tense1": "Transition", "tense2": "اِنْتِقَال/اِنْتِقَالَات/اِنْتِقَالَان/اِنْتِقَالَاتٍ/اِنْتِقَالَيْنِ", "type": "word"},
+  {"tense1": "Doux", "tense2": "نَاعِم/نَاعِمُون/نَاعِمَان/نَاعِمِين/نَاعِمَيْنِ", "type": "word"},
+  {"tense1": "Serrer la main", "tense2": "صَافَحَ/يُصَافِحُ/مُصَافَحَة/صَافِحْ/يُصَافَحُ/صُوفِحَ", "type": "verb"},
+  {"tense1": "Brillant", "tense2": "لَامِع/لَامِعُون/لَامِعَان/لَامِعِين/لَامِعَيْنِ", "type": "word"},
+  {"tense1": "Découper", "tense2": "قَصَّ/يَقُصُّ/قَصّ/قُصَّ/يُقَصُّ/قُصَّ", "type": "verb"},
+  {"tense1": "Se déguiser", "tense2": "تَنَكَّرَ/يَتَنَكَّرُ/تَنَكُّر/تَنَكَّرْ/يُتَنَكَّرُ/تُنُكِّرَ", "type": "verb"},
+  {"tense1": "Kioske", "tense2": "كُشْك/أَكْشَاك/كُشْكَان/أَكْشَاكًا/كُشْكَيْنِ", "type": "word"},
+  {"tense1": "Extrémité", "tense2": "طَرَف/أَطْرَاف/طَرَفَان/أَطْرَافًا/طَرَفَيْنِ", "type": "word"},
+  {"tense1": "Absence", "tense2": "غِيَاب/غِيَابَات/غِيَابَان/غِيَابَاتٍ/غِيَابَيْنِ", "type": "word"},
+  {"tense1": "Stresse", "tense2": "تَوَتُّر/تَوَتُّرَات/تَوَتُّرَان/تَوَتُّرَاتٍ/تَوَتُّرَيْنِ", "type": "word"},
+  {"tense1": "Chronomètre", "tense2": "مُؤَقِّت/مُؤَقِّتَات/مُؤَقِّتَان/مُؤَقِّتَاتٍ/مُؤَقِّتَيْنِ", "type": "word"},
+  {"tense1": "Squelette", "tense2": "هَيْكَل/هَيَاكِل/هَيْكَلَان/هَيَاكِلَ/هَيْكَلَيْنِ", "type": "word"},
+  {"tense1": "Pandémie", "tense2": "جَائِحَة/جَوَائِح/جَائِحَتَان/جَوَائِحَ/جَائِحَتَيْنِ", "type": "word"},
+  {"tense1": "Illégal", "tense2": "غَيْرُ قَانُونِيّ/غَيْرُ قَانُونِيِّين/غَيْرُ قَانُونِيَّان/غَيْرَ قَانُونِيِّين/غَيْرَ قَانُونِيَّيْنِ", "type": "word"},
+  {"tense1": "Identifier", "tense2": "عَرَّفَ/يُعَرِّفُ/تَعْرِيف/عَرِّفْ/يُعَرَّفُ/عُرِّفَ", "type": "verb"},
+  {"tense1": "Sauter", "tense2": "قَفَزَ/يَقْفِزُ/قَفْز/اِقْفِزْ/يُقْفَزُ/قُفِزَ", "type": "verb"},
+  {"tense1": "Doué", "tense2": "مَوْهُوب/مَوْهُوبُون/مَوْهُوبَان/مَوْهُوبِين/مَوْهُوبَيْنِ", "type": "word"},
+  {"tense1": "Attérir", "tense2": "هَبَطَ/يَهْبِطُ/هُبُوط/اِهْبِطْ/يُهْبَطُ/هُبِطَ", "type": "verb"},
+  {"tense1": "Gratuit", "tense2": "مَجَّانِيّ/مَجَّانِيُّون/مَجَّانِيَّان/مَجَّانِيِّين/مَجَّانِيَّيْنِ", "type": "word"},
+  {"tense1": "Paire", "tense2": "تَطَابُق/تَطَابُقَات/تَطَابُقَان/تَطَابُقَاتٍ/تَطَابُقَيْنِ", "type": "word"},
+  {"tense1": "Comparer", "tense2": "قَارَنَ/يُقَارِنُ/مُقَارَنَة/قَارِنْ/يُقَارَنُ/قُورِنَ", "type": "verb"},
+  {"tense1": "Assurer", "tense2": "تَأَمَّنَ/يَتَأَمَّنُ/تَأَمُّن/تَأَمَّنْ/يُتَأَمَّنُ/تُؤُمِّنَ", "type": "verb"},
+  {"tense1": "Pur", "tense2": "نَقِيّ/أَنْقِيَاء/نَقِيَّان/أَنْقِيَاءَ/نَقِيَّيْنِ", "type": "word"},
+  {"tense1": "Aveugle", "tense2": "أَعْمَى/عُمْيَان/أَعْمَيَان/عُمْيَانًا/أَعْمَيَيْنِ", "type": "word"},
+  {"tense1": "Vue", "tense2": "بَصَر/أَبْصَار/بَصَرَان/أَبْصَارًا/بَصَرَيْنِ", "type": "word"},
+  {"tense1": "Monnaie", "tense2": "عُمْلَة/عُمْلَات/عُمْلَتَان/عُمْلَاتٍ/عُمْلَتَيْنِ", "type": "word"},
+  {"tense1": "Appareil", "tense2": "جِهَاز/أَجْهِزَة/جِهَازَان/أَجْهِزَةً/جِهَازَيْنِ", "type": "word"},
+  {"tense1": "Pas du tout", "tense2": "عَلَى إِطْلَاق", "type": "sentence"},
+  {"tense1": "Passager", "tense2": "رَاكِب/رُكَّاب/رَاكِبَان/رُكَّابًا/رَاكِبَيْنِ", "type": "word"},
+  {"tense1": "S'appeler", "tense2": "سُمِّيَ/يُسَمَّى/تَسْمِيَة/سَمِّ/يُسَمَّى/سُمِّيَ", "type": "verb"},
+  {"tense1": "Séparer", "tense2": "فَصَلَ/يَفْصِلُ/فَصْل/اِفْصِلْ/يُفْصَلُ/فُصِلَ", "type": "verb"},
+  {"tense1": "Souffler", "tense2": "نَفَخَ/يَنْفُخُ/نَفْخ/اُنْفُخْ/يُنْفَخُ/نُفِخَ", "type": "verb"},
+  {"tense1": "Guerre", "tense2": "حَرْب/حُرُوب/حَرْبَان/حُرُوبًا/حَرْبَيْنِ", "type": "word"},
+  {"tense1": "Soldat", "tense2": "جُنْدِيّ/جُنُود/جُنْدِيَّان/جُنُودًا/جُنْدِيَّيْنِ", "type": "word"},
+  {"tense1": "Os", "tense2": "عَظْم/عِظَام/عَظْمَان/عِظَامًا/عَظْمَيْنِ", "type": "word"},
+  {"tense1": "Longueur", "tense2": "طُول/أَطْوَال/طُولَان/أَطْوَالًا/طُولَيْنِ", "type": "word"},
+  {"tense1": "Largeur", "tense2": "عَرْض/عُرُوض/عَرْضَان/عُرُوضًا/عَرْضَيْنِ", "type": "word"},
+  {"tense1": "Bâtiment", "tense2": "مَبْنَى/مَبَانٍ/مَبْنَيَان/مَبَانِيَ/مَبْنَيَيْنِ", "type": "word"},
+  {"tense1": "Réserver", "tense2": "حَجَزَ/يَحْجِزُ/حَجْز/اِحْجِزْ/يُحْجَزُ/حُجِزَ", "type": "verb"},
+  {"tense1": "Martyr", "tense2": "شَهِيد/شُهَدَاء/شَهِيدَان/شُهَدَاءَ/شَهِيدَيْنِ", "type": "word"},
+  {"tense1": "Attaque/raid", "tense2": "غَارَة/غَارَات/غَارَتَان/غَارَاتٍ/غَارَتَيْنِ", "type": "word"},
+  {"tense1": "Précis/exact", "tense2": "دَقِيق/دَقِيقُون/دَقِيقَان/دَقِيقِين/دَقِيقَيْنِ", "type": "word"},
+  {"tense1": "Élément", "tense2": "عُنْصُر/عَنَاصِر/عُنْصُرَان/عَنَاصِرَ/عُنْصُرَيْنِ", "type": "word"},
+  {"tense1": "Lampadaire", "tense2": "عَمُود الإِنَارَة/أَعْمِدَة الإِنَارَة/عَمُودَا الإِنَارَة/أَعْمِدَةَ الإِنَارَة/عَمُودَيِ الإِنَارَة", "type": "word"},
+  {"tense1": "Prédire", "tense2": "تَنَبَّأَ/يَتَنَبَّأُ/تَنَبُّؤ/تَنَبَّأْ/يُتَنَبَّأُ/تُنُبِّئَ", "type": "verb"},
+  {"tense1": "Terminer", "tense2": "أَنْهَى/يُنْهِي/إِنْهَاء/أَنْهِ/يُنْهَى/أُنْهِيَ", "type": "verb"},
+  {"tense1": "Jouer", "tense2": "لَعِبَ/يَلْعَبُ/لَعِب/اِلْعَبْ/يُلْعَبُ/لُعِبَ", "type": "verb"},
+  {"tense1": "Éponge", "tense2": "إِسْفَنْجَة/إِسْفَنْجَات/إِسْفَنْجَتَان/إِسْفَنْجَاتٍ/إِسْفَنْجَتَيْنِ", "type": "word"},
+  {"tense1": "Échec", "tense2": "شَطْرَنْج", "type": "word"},
+  {"tense1": "Violon", "tense2": "كَمَان/كَمَانَات/كَمَانَان/كَمَانَاتٍ/كَمَانَيْنِ", "type": "word"},
+  {"tense1": "Roter", "tense2": "تَجَشَّأَ/يَتَجَشَّأُ/تَجَشُّؤ/تَجَشَّأْ/يُتَجَشَّأُ/تُجُشِّئَ", "type": "verb"},
+  {"tense1": "Péter", "tense2": "فَجَرَ/يَفْجُرُ/فَجْر/اُفْجُرْ/يُفْجَرُ/فُجِرَ", "type": "verb"},
+  {"tense1": "Vider", "tense2": "فَرَغَ/يَفْرِغُ/فَرْغ/اِفْرِغْ/يُفْرَغُ/فُرِغَ", "type": "verb"},
+  {"tense1": "Coopérer", "tense2": "تَعَاوَنَ/يَتَعَاوَنُ/تَعَاوُن/تَعَاوَنْ/يُتَعَاوَنُ/تُعُووِنَ", "type": "verb"},
+  {"tense1": "Écraser", "tense2": "هَرَسَ/يَهْرِسُ/هَرْس/اُهْرُسْ/يُهْرَسُ/هُرِسَ", "type": "verb"},
+  {"tense1": "Naviguer", "tense2": "أَبْحَرَ/يُبْحِرُ/إِبْحَار/أَبْحِرْ/يُبْحَرُ/أُبْحِرَ", "type": "verb"},
+  {"tense1": "Rouille", "tense2": "صَدَأ/أَصْدَاء/صَدَآن/أَصْدَاءً/صَدَأَيْنِ", "type": "word"},
+  {"tense1": "Micro", "tense2": "مِيكْرُوفُون/مِيكْرُوفُونَات/مِيكْرُوفُونَان/مِيكْرُوفُونَاتٍ/مِيكْرُوفُونَيْنِ", "type": "word"},
+  {"tense1": "Sac", "tense2": "حَقِيبَة/حَقَائِب/حَقِيبَتَان/حَقَائِبَ/حَقِيبَتَيْنِ", "type": "word"},
+  {"tense1": "Tranche", "tense2": "شَرِيحَة/شَرَائِح/شَرِيحَتَان/شَرَائِحَ/شَرِيحَتَيْنِ", "type": "word"}
 ]
         // French
         const pronouns_french = ["je", "tu", "il", "elle", "nous", "vous", "ils", "elles"];
