--- a/index.html
+++ b/index.html
@@ -1019,61 +1019,61 @@
   {"tense1": "Micro", "tense2": "مِيكْرُوفُون/مِيكْرُوفُونَات/مِيكْرُوفُونَان/مِيكْرُوفُونَاتٍ/مِيكْرُوفُونَيْنِ", "type": "word"},
   {"tense1": "Sac", "tense2": "حَقِيبَة/حَقَائِب/حَقِيبَتَان/حَقَائِبَ/حَقِيبَتَيْنِ", "type": "word"},
   {"tense1": "Tranche", "tense2": "شَرِيحَة/شَرَائِح/شَرِيحَتَان/شَرَائِحَ/شَرِيحَتَيْنِ", "type": "word"},
-  {"tense1": "Phare", "tense2": "مِنارَة / مَنارات / مِنارَتان / مَناراتٍ / مِنارَتَيْن", "type": "word"},
-  {"tense1": "Agréable", "tense2": "مُمْتِع / مُمْتِعة / مُمْتِعان / مُمْتِعين / مُمْتِعَيْن", "type": "word"},
-  {"tense1": "Original", "tense2": "أَصْلِيّ / أَصْلِيّة / أَصْلِيّان / أَصْلِيّين / أَصْلِيَّيْن", "type": "word"},
-  {"tense1": "Propriétaire", "tense2": "مَالِك / مُلّاك / مالِكان / مُلّاكًا / مالِكَيْن", "type": "word"},
-  {"tense1": "Siècle", "tense2": "قَرْن / قُرُون / قَرْنان / قُرُونًا / قَرْنَيْن", "type": "word"},
-  {"tense1": "Réalisateur", "tense2": "مُخْرِج / مُخْرِجون / مُخْرِجان / مُخْرِجين / مُخْرِجَيْن", "type": "word"},
-  {"tense1": "Compétition", "tense2": "مسابقة / مسابقات / مسابقتان / مسابقاتٍ / مسابقتَيْن", "type": "word"},
-  {"tense1": "En cours", "tense2": "قيد الإنجاز", "type": "sentence"},
-  {"tense1": "Catégorie", "tense2": "فئة / فئات / فئتان / فئاتٍ / فئتَيْن", "type": "word"},
-  {"tense1": "Période", "tense2": "فترة / فترات / فترتان / فتراتٍ / فترتَيْن", "type": "word"},
-  {"tense1": "République", "tense2": "جمهورية / جمهوريات / جمهوريتان / جمهورياتٍ / جمهوريتَيْن", "type": "word"},
-  {"tense1": "Record", "tense2": "رقم قياسي / أرقام قياسية / رقمان قياسيان / أرقامًا قياسية / رقمَيْن قياسيَيْن", "type": "word"},
-  {"tense1": "Valeur", "tense2": "قيمة / قِيَم / قيمتان / قِيَمًا / قيمتَيْن", "type": "word"},
-  {"tense1": "Total", "tense2": "إجمالي / إجماليات / إجماليان / إجمالياتٍ / إجماليَيْن", "type": "word"},
-  {"tense1": "Lancement", "tense2": "إطلاق / إطلاقات / إطلاقان / إطلاقاتٍ / إطلاقَيْن", "type": "word"},
-  {"tense1": "Histoire", "tense2": "حكاية / حكايات / حكايتان / حكاياتٍ / حكايتَيْن", "type": "word"},
-  {"tense1": "Caillou", "tense2": "حصاة / حَصَى / حصاتان / حَصًى / حصاتَيْن", "type": "word"},
-  {"tense1": "Bar", "tense2": "حانة / حانات / حانتان / حاناتٍ / حانتَيْن", "type": "word"},
-  {"tense1": "En particulier", "tense2": "تحديدًا", "type": "sentence"},
-  {"tense1": "Isolé", "tense2": "نائي / نائية / نائيان / نائيين / نائيَيْن", "type": "word"},
-  {"tense1": "Bière", "tense2": "جعة / جِعَع / جعتان / جِعَعًا / جعتَيْن", "type": "word"},
-  {"tense1": "Consister", "tense2": "تَمَثَّلَ / يَتَمَثَّلُ / تَمَثُّل / تَمَثَّلْ / يُتَمَثَّلُ / تُمُثِّلَ", "type": "verb"},
-  {"tense1": "Rebondir", "tense2": "اِرْتَدَّ / يَرْتَدُّ / اِرْتِداد / اِرْتَدَّ / يُرْتَدُّ / اُرْتُدَّ", "type": "verb"},
-  {"tense1": "Carrelage", "tense2": "بلاط / بلاطات / بلاطان / بلاطاتٍ / بلاطَيْن", "type": "word"},
-  {"tense1": "Droit (straight)", "tense2": "مستقيم / مستقيمة / مستقيمان / مستقيمين / مستقيمَيْن", "type": "word"},
-  {"tense1": "Option", "tense2": "خيار / خيارات / خياران / خياراتٍ / خيارَيْن", "type": "word"},
-  {"tense1": "Véhicule", "tense2": "مركبة / مركبات / مركبتان / مركباتٍ / مركبتَيْن", "type": "word"},
-  {"tense1": "Transporter", "tense2": "نقل / يَنْقُلُ / نَقْل / اُنْقُلْ / يُنْقَلُ / نُقِلَ", "type": "verb"},
-  {"tense1": "Destination", "tense2": "وجهة / وجهات / وجهتان / وجهاتٍ / وجهتَيْن", "type": "word"},
-  {"tense1": "Contexte", "tense2": "سياق / سياقات / سياقان / سياقاتٍ / سياقَيْن", "type": "word"},
-  {"tense1": "Aborder", "tense2": "تَنَاوَلَ / يَتَنَاوَلُ / تَنَاوُل / تَنَاوَلْ / يُتَنَاوَلُ / تُنُوِلَ", "type": "verb"},
-  {"tense1": "Risque", "tense2": "خَطَر / أَخْطار / خَطَران / أَخْطارًا / خَطَرَيْن", "type": "word"},
-  {"tense1": "Trompeur", "tense2": "مضلل / مضللة / مضللان / مضللين / مضللَيْن", "type": "word"},
-  {"tense1": "Changement climatique", "tense2": "تغير المناخي", "type": "sentence"},
-  {"tense1": "Accorder/permettre", "tense2": "مَنَحَ / يَمْنَحُ / مَنْح / اِمْنَحْ / يُمْنَحُ / مُنِحَ", "type": "verb"},
-  {"tense1": "Interview", "tense2": "مقابلة / مقابلات / مقابلتان / مقابلاتٍ / مقابلتَيْن", "type": "word"},
-  {"tense1": "Admettre", "tense2": "اعترف / يعترف / اعتراف / اعترفْ / يُعْتَرَفُ / اُعْتُرِفَ", "type": "verb"},
-  {"tense1": "Asunto", "tense2": "قضية / قضايا / قضيتان / قضايا / قضيتَيْن", "type": "word"},
-  {"tense1": "Joie", "tense2": "بهجة / بَهَجات / بهجتان / بَهَجاتٍ / بهجتَيْن", "type": "word"},
-  {"tense1": "Égale", "tense2": "متعادل / متعادلة / متعادلان / متعادلين / متعادلَيْن", "type": "word"},
-  {"tense1": "Crucial", "tense2": "حاسمة / حاسمات / حاسمتان / حاسماتٍ / حاسمتَيْن", "type": "word"},
-  {"tense1": "Adhésif", "tense2": "صمغ / أصماغ / صمغان / أصماغًا / صمغَيْن", "type": "word"},
-  {"tense1": "Abandonner", "tense2": "تخلى / يتخلى / تَخَلٍّ / تَخَلَّ / يُتَخَلَّى / تُخُلِّيَ", "type": "verb"},
-  {"tense1": "Suivre", "tense2": "سلكَ / يسلكُ / سُلُوك / اُسلُكْ / يُسْلَكُ / سُلِكَ", "type": "verb"},
-  {"tense1": "Timbre", "tense2": "طابع / طوابع / طابعان / طوابعًا / طابعَيْن", "type": "word"},
-  {"tense1": "Balançoire", "tense2": "أرجوحة / أراجيح / أرجوحتان / أراجيحَ / أرجوحتَيْن", "type": "word"},
-  {"tense1": "À l'envers", "tense2": "مقلوب / مقلوبة / مقلوبان / مقلوبين / مقلوبَيْن", "type": "word"},
-  {"tense1": "Cadre", "tense2": "إطار / أُطُر / إطاران / أُطُرًا / إطارَيْن", "type": "word"},
-  {"tense1": "Violation", "tense2": "مخالفة / مخالفات / مخالفتان / مخالفاتٍ / مخالفتَيْن", "type": "word"},
-  {"tense1": "Attrayant", "tense2": "ملفتًا / ملفتة / ملفتان / ملفتين / ملفتَيْن", "type": "word"},
-  {"tense1": "Pôle Nord", "tense2": "قطب الشمالي", "type": "sentence"},
-  {"tense1": "Avoir lieux", "tense2": "عُقِدَ / يُعقدُ / عَقْد / اُعْقُدْ / يُعْقَدُ / عُقِدَ", "type": "verb"},
-  {"tense1": "Demander", "tense2": "سَأَلَ / يَسْأَلُ / سُؤال / اِسْأَلْ / يُسْأَلُ / سُئِلَ", "type": "verb"},
-  {"tense1": "Avantage", "tense2": "ميزة / مزايا / ميزتان / مزايا / ميزتَيْن", "type": "word"},
-  {"tense1": "Inconvénient", "tense2": "عيب / عيوب / عيبان / عيوبًا / عيبَيْن", "type": "word"}
+  {"tense1": "Phare", "tense2": "مِنَارَة / مَنَارَات / مِنَارَتَانِ / مَنَارَاتٍ / مِنَارَتَيْنِ", "type": "word"},
+  {"tense1": "Agréable", "tense2": "مُمْتِعٌ / مُمْتِعَةٌ / مُمْتِعَانِ / مُمْتِعِينَ / مُمْتِعَيْنِ", "type": "word"},
+  {"tense1": "Original", "tense2": "أَصْلِيٌّ / أَصْلِيَّةٌ / أَصْلِيَّانِ / أَصْلِيِّينَ / أَصْلِيَّيْنِ", "type": "word"},
+  {"tense1": "Propriétaire", "tense2": "مَالِكٌ / مُلَّاكٌ / مَالِكَانِ / مُلَّاكًا / مَالِكَيْنِ", "type": "word"},
+  {"tense1": "Siècle", "tense2": "قَرْنٌ / قُرُونٌ / قَرْنَانِ / قُرُونًا / قَرْنَيْنِ", "type": "word"},
+  {"tense1": "Réalisateur", "tense2": "مُخْرِجٌ / مُخْرِجُونَ / مُخْرِجَانِ / مُخْرِجِينَ / مُخْرِجَيْنِ", "type": "word"},
+  {"tense1": "Compétition", "tense2": "مُسَابَقَةٌ / مُسَابَقَاتٌ / مُسَابَقَتَانِ / مُسَابَقَاتٍ / مُسَابَقَتَيْنِ", "type": "word"},
+  {"tense1": "En cours", "tense2": "قَيْدَ الْإِنْجَازِ", "type": "sentence"},
+  {"tense1": "Catégorie", "tense2": "فِئَةٌ / فِئَاتٌ / فِئَتَانِ / فِئَاتٍ / فِئَتَيْنِ", "type": "word"},
+  {"tense1": "Période", "tense2": "فَتْرَةٌ / فَتَرَاتٌ / فَتْرَتَانِ / فَتَرَاتٍ / فَتْرَتَيْنِ", "type": "word"},
+  {"tense1": "République", "tense2": "جُمْهُورِيَّةٌ / جُمْهُورِيَّاتٌ / جُمْهُورِيَّتَانِ / جُمْهُورِيَّاتٍ / جُمْهُورِيَّتَيْنِ", "type": "word"},
+  {"tense1": "Record", "tense2": "رَقَمٌ قِيَاسِيٌّ / أَرْقَامٌ قِيَاسِيَّةٌ / رَقَمَانِ قِيَاسِيَّانِ / أَرْقَامًا قِيَاسِيَّةً / رَقَمَيْنِ قِيَاسِيَّيْنِ", "type": "word"},
+  {"tense1": "Valeur", "tense2": "قِيمَةٌ / قِيَمٌ / قِيمَتَانِ / قِيَمًا / قِيمَتَيْنِ", "type": "word"},
+  {"tense1": "Total", "tense2": "إِجْمَالِيٌّ / إِجْمَالِيَّاتٌ / إِجْمَالِيَّانِ / إِجْمَالِيَّاتٍ / إِجْمَالِيَّيْنِ", "type": "word"},
+  {"tense1": "Lancement", "tense2": "إِطْلَاقٌ / إِطْلَاقَاتٌ / إِطْلَاقَانِ / إِطْلَاقَاتٍ / إِطْلَاقَيْنِ", "type": "word"},
+  {"tense1": "Histoire", "tense2": "حِكَايَةٌ / حِكَايَاتٌ / حِكَايَتَانِ / حِكَايَاتٍ / حِكَايَتَيْنِ", "type": "word"},
+  {"tense1": "Caillou", "tense2": "حَصَاةٌ / حَصًى / حَصَاتَانِ / حَصًى / حَصَاتَيْنِ", "type": "word"},
+  {"tense1": "Bar", "tense2": "حَانَةٌ / حَانَاتٌ / حَانَتَانِ / حَانَاتٍ / حَانَتَيْنِ", "type": "word"},
+  {"tense1": "En particulier", "tense2": "تَحْدِيدًا", "type": "sentence"},
+  {"tense1": "Isolé", "tense2": "نَائٍ / نَائِيَةٌ / نَائِيَانِ / نَائِيِينَ / نَائِيَيْنِ", "type": "word"},
+  {"tense1": "Bière", "tense2": "جِعَّةٌ / جِعَعٌ / جِعَّتَانِ / جِعَعًا / جِعَّتَيْنِ", "type": "word"},
+  {"tense1": "Consister", "tense2": "تَمَثَّلَ / يَتَمَثَّلُ / تَمَثُّلٌ / تَمَثَّلْ / يُتَمَثَّلُ / تُمُثِّلَ", "type": "verb"},
+  {"tense1": "Rebondir", "tense2": "اِرْتَدَّ / يَرْتَدُّ / اِرْتِدَادٌ / اِرْتَدَّ / يُرْتَدُّ / اُرْتُدَّ", "type": "verb"},
+  {"tense1": "Carrelage", "tense2": "بَلَاطٌ / بَلَاطَاتٌ / بَلَاطَانِ / بَلَاطَاتٍ / بَلَاطَيْنِ", "type": "word"},
+  {"tense1": "Droit (straight)", "tense2": "مُسْتَقِيمٌ / مُسْتَقِيمَةٌ / مُسْتَقِيمَانِ / مُسْتَقِيمِينَ / مُسْتَقِيمَيْنِ", "type": "word"},
+  {"tense1": "Option", "tense2": "خِيَارٌ / خِيَارَاتٌ / خِيَارَانِ / خِيَارَاتٍ / خِيَارَيْنِ", "type": "word"},
+  {"tense1": "Véhicule", "tense2": "مَرْكَبَةٌ / مَرْكَبَاتٌ / مَرْكَبَتَانِ / مَرْكَبَاتٍ / مَرْكَبَتَيْنِ", "type": "word"},
+  {"tense1": "Transporter", "tense2": "نَقَلَ / يَنْقُلُ / نَقْلٌ / اُنْقُلْ / يُنْقَلُ / نُقِلَ", "type": "verb"},
+  {"tense1": "Destination", "tense2": "وِجْهَةٌ / وِجْهَاتٌ / وِجْهَتَانِ / وِجْهَاتٍ / وِجْهَتَيْنِ", "type": "word"},
+  {"tense1": "Contexte", "tense2": "سِيَاقٌ / سِيَاقَاتٌ / سِيَاقَانِ / سِيَاقَاتٍ / سِيَاقَيْنِ", "type": "word"},
+  {"tense1": "Aborder", "tense2": "تَنَاوَلَ / يَتَنَاوَلُ / تَنَاوُلٌ / تَنَاوَلْ / يُتَنَاوَلُ / تُنُوِلَ", "type": "verb"},
+  {"tense1": "Risque", "tense2": "خَطَرٌ / أَخْطَارٌ / خَطَرَانِ / أَخْطَارًا / خَطَرَيْنِ", "type": "word"},
+  {"tense1": "Trompeur", "tense2": "مُضَلِّلٌ / مُضَلِّلَةٌ / مُضَلِّلَانِ / مُضَلِّلِينَ / مُضَلِّلَيْنِ", "type": "word"},
+  {"tense1": "Changement climatique", "tense2": "تَغَيُّرٌ الْمُنَاخِيُّ", "type": "sentence"},
+  {"tense1": "Accorder/permettre", "tense2": "مَنَحَ / يَمْنَحُ / مَنْحٌ / اِمْنَحْ / يُمْنَحُ / مُنِحَ", "type": "verb"},
+  {"tense1": "Interview", "tense2": "مُقَابَلَةٌ / مُقَابَلَاتٌ / مُقَابَلَتَانِ / مُقَابَلَاتٍ / مُقَابَلَتَيْنِ", "type": "word"},
+  {"tense1": "Admettre", "tense2": "اِعْتَرَفَ / يَعْتَرِفُ / اِعْتِرَافٌ / اِعْتَرِفْ / يُعْتَرَفُ / اُعْتُرِفَ", "type": "verb"},
+  {"tense1": "Asunto", "tense2": "قَضِيَّةٌ / قَضَايَا / قَضِيَّتَانِ / قَضَايَا / قَضِيَّتَيْنِ", "type": "word"},
+  {"tense1": "Joie", "tense2": "بَهْجَةٌ / بَهَجَاتٌ / بَهْجَتَانِ / بَهَجَاتٍ / بَهْجَتَيْنِ", "type": "word"},
+  {"tense1": "Égale", "tense2": "مُتَعَادِلٌ / مُتَعَادِلَةٌ / مُتَعَادِلَانِ / مُتَعَادِلِينَ / مُتَعَادِلَيْنِ", "type": "word"},
+  {"tense1": "Crucial", "tense2": "حَاسِمَةٌ / حَاسِمَاتٌ / حَاسِمَتَانِ / حَاسِمَاتٍ / حَاسِمَتَيْنِ", "type": "word"},
+  {"tense1": "Adhésif", "tense2": "صَمْغٌ / أَصْمَاغٌ / صَمْغَانِ / أَصْمَاغًا / صَمْغَيْنِ", "type": "word"},
+  {"tense1": "Abandonner", "tense2": "تَخَلَّى / يَتَخَلَّى / تَخَلٍّ / تَخَلَّ / يُتَخَلَّى / تُخُلِّيَ", "type": "verb"},
+  {"tense1": "Suivre", "tense2": "سَلَكَ / يَسْلُكُ / سُلُوكٌ / اُسْلُكْ / يُسْلَكُ / سُلِكَ", "type": "verb"},
+  {"tense1": "Timbre", "tense2": "طَابِعٌ / طَوَابِعُ / طَابِعَانِ / طَوَابِعًا / طَابِعَيْنِ", "type": "word"},
+  {"tense1": "Balançoire", "tense2": "أُرْجُوحَةٌ / أَرَاجِيحُ / أُرْجُوحَتَانِ / أَرَاجِيحَ / أُرْجُوحَتَيْنِ", "type": "word"},
+  {"tense1": "À l'envers", "tense2": "مَقْلُوبٌ / مَقْلُوبَةٌ / مَقْلُوبَانِ / مَقْلُوبِينَ / مَقْلُوبَيْنِ", "type": "word"},
+  {"tense1": "Cadre", "tense2": "إِطَارٌ / أُطُرٌ / إِطَارَانِ / أُطُرًا / إِطَارَيْنِ", "type": "word"},
+  {"tense1": "Violation", "tense2": "مُخَالَفَةٌ / مُخَالَفَاتٌ / مُخَالَفَتَانِ / مُخَالَفَاتٍ / مُخَالَفَتَيْنِ", "type": "word"},
+  {"tense1": "Attrayant", "tense2": "مُلْفِتٌ / مُلْفِتَةٌ / مُلْفِتَانِ / مُلْفِتِينَ / مُلْفِتَيْنِ", "type": "word"},
+  {"tense1": "Pôle Nord", "tense2": "الْقُطْبُ الشَّمَالِيُّ", "type": "sentence"},
+  {"tense1": "Avoir lieux", "tense2": "عُقِدَ / يُعْقَدُ / عَقْدٌ / اُعْقُدْ / يُعْقَدُ / عُقِدَ", "type": "verb"},
+  {"tense1": "Demander", "tense2": "سَأَلَ / يَسْأَلُ / سُؤَالٌ / اِسْأَلْ / يُسْأَلُ / سُئِلَ", "type": "verb"},
+  {"tense1": "Avantage", "tense2": "مِيزَةٌ / مَزَايَا / مِيزَتَانِ / مَزَايَا / مِيزَتَيْنِ", "type": "word"},
+  {"tense1": "Inconvénient", "tense2": "عَيْبٌ / عُيُوبٌ / عَيْبَانِ / عُيُوبًا / عَيْبَيْنِ", "type": "word"}
 ]
         // French
         const pronouns_french = ["je", "tu", "il", "elle", "nous", "vous", "ils", "elles"];
