new arabic words

--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,79 @@
   {"tense1": "Avoir lieux", "tense2": "عُقِدَ / يُعْقَدُ / عَقْدٌ / اُعْقُدْ / يُعْقَدُ / عُقِدَ", "type": "verb"},
   {"tense1": "Demander", "tense2": "سَأَلَ / يَسْأَلُ / سُؤَالٌ / اِسْأَلْ / يُسْأَلُ / سُئِلَ", "type": "verb"},
   {"tense1": "Avantage", "tense2": "مِيزَةٌ / مَزَايَا / مِيزَتَانِ / مَزَايَا / مِيزَتَيْنِ", "type": "word"},
-  {"tense1": "Inconvénient", "tense2": "عَيْبٌ / عُيُوبٌ / عَيْبَانِ / عُيُوبًا / عَيْبَيْنِ", "type": "word"}
+  {"tense1": "Inconvénient", "tense2": "عَيْبٌ / عُيُوبٌ / عَيْبَانِ / عُيُوبًا / عَيْبَيْنِ", "type": "word"},
+  {"tense1": "Position", "tense2": "مَوْضِع / مَوَاضِع / مَوْضِعَان / مَوَاضِعَ / مَوْضِعَيْن", "type": "word"},
+  {"tense1": "Tordre", "tense2": "لَوَى / يَلْوِي / لَيّ / اِلْوِ / يُلْوَى / لُوِيَ", "type": "verb"},
+  {"tense1": "Se tenir", "tense2": "وَقَفَ / يَقِفُ / وُقُوف / قِفْ / يُوقَف / وُقِفَ", "type": "verb"},
+  {"tense1": "Envier", "tense2": "حَسَدَ / يَحْسُدُ / حَسَد / اُحْسُدْ / يُحْسَد / حُسِدَ", "type": "verb"},
+  {"tense1": "Jalouser", "tense2": "غَارَ / يَغَارُ / غَيْرَة / غِرْ / يُغَار / غِيرَ", "type": "verb"},
+  {"tense1": "Assassiner", "tense2": "اِغْتَالَ / يَغْتَالُ / اِغْتِيَال / اِغْتَلْ / يُغْتَال / اُغْتِيلَ", "type": "verb"},
+  {"tense1": "Complexe", "tense2": "مُعَقَّدَة / مُعَقَّدَات / مُعَقَّدَتَان / مُعَقَّدَاتٍ / مُعَقَّدَتَيْن", "type": "word"},
+  {"tense1": "Simultané", "tense2": "مُتَزَامِن / مُتَزَامِنُون / مُتَزَامِنَان / مُتَزَامِنِين / مُتَزَامِنَيْن", "type": "word"},
+  {"tense1": "Exécuter", "tense2": "نَفَّذَ / يُنَفِّذُ / تَنْفِيذ / نَفِّذْ / يُنَفَّذ / نُفِّذَ", "type": "verb"},
+  {"tense1": "Fichier", "tense2": "مَلَفّ / مَلَفَّات / مَلَفَّان / مَلَفَّاتٍ / مَلَفَّيْن", "type": "word"},
+  {"tense1": "Capable de", "tense2": "قَابِل / قَابِلُون / قَابِلَان / قَابِلِين / قَابِلَيْن", "type": "word"},
+  {"tense1": "Extension", "tense2": "تَوْسِيع / تَوْسِيعَات / تَوْسِيعَان / تَوْسِيعَاتٍ / تَوْسِيعَيْن", "type": "word"},
+  {"tense1": "Porter", "tense2": "حَمَلَ / يَحْمِلُ / حَمْل / اِحْمِلْ / يُحْمَل / حُمِلَ", "type": "verb"},
+  {"tense1": "Recommander", "tense2": "وَصَّى / يُوَصِّي / تَوْصِيَة / وَصِّ / يُوَصَّى / وُصِّيَ", "type": "verb"},
+  {"tense1": "Document", "tense2": "مُسْتَنَد / مُسْتَنَدَات / مُسْتَنَدَان / مُسْتَنَدَاتٍ / مُسْتَنَدَيْن", "type": "word"},
+  {"tense1": "Reculer", "tense2": "تَرَاجَعَ / يَتَرَاجَعُ / تَرَاجُع / تَرَاجَعْ / يُتَرَاجَع / تُرُوجِعَ", "type": "verb"},
+  {"tense1": "Juif", "tense2": "يَهُودِيّ / يَهُود / يَهُودِيَّان / يَهُودًا / يَهُودِيَّيْن", "type": "word"},
+  {"tense1": "Fonder", "tense2": "أَسَّسَ / يُؤَسِّسُ / تَأْسِيس / أَسِّسْ / يُؤَسَّس / أُسِّسَ", "type": "verb"},
+  {"tense1": "En échange", "tense2": "مُقَابِل / مُقَابِلُون / مُقَابِلَان / مُقَابِلِين / مُقَابِلَيْن", "type": "word"},
+  {"tense1": "Émigrer", "tense2": "هَاجَرَ / يُهَاجِرُ / هِجْرَة / هَاجِرْ / يُهَاجَر / هُوجِرَ", "type": "verb"},
+  {"tense1": "Viser", "tense2": "اِسْتَهْدَفَ / يَسْتَهْدِفُ / اِسْتِهْدَاف / اِسْتَهْدِفْ / يُسْتَهْدَف / اُسْتُهْدِفَ", "type": "verb"},
+  {"tense1": "Commetre", "tense2": "اِرْتَكَبَ / يَرْتَكِبُ / اِرْتِكَاب / اِرْتَكِبْ / يُرْتَكَب / اُرْتُكِبَ", "type": "verb"},
+  {"tense1": "Massacre", "tense2": "مَجْزَرَة / مَجَازِر / مَجْزَرَتَان / مَجَازِرَ / مَجْزَرَتَيْن", "type": "word"},
+  {"tense1": "Contre", "tense2": "بِحَقّ", "type": "word"},
+  {"tense1": "Se pencher", "tense2": "اِكْتَفَى / يَكْتَفِي / اِكْتِفَاء / اِكْتَفِ / يُكْتَفَى / اُكْتُفِيَ", "type": "verb"},
+  {"tense1": "Fesse", "tense2": "مُؤَخِّرَة / مُؤَخِّرَات / مُؤَخِّرَتَان / مُؤَخِّرَاتٍ / مُؤَخِّرَتَيْن", "type": "word"},
+  {"tense1": "Salive", "tense2": "رِيق / أَرْيَاق / رِيقَان / أَرْيَاقًا / رِيقَيْن", "type": "word"},
+  {"tense1": "Éclairer", "tense2": "أَنَارَ / يُنِيرُ / إِنَارَة / أَنِرْ / يُنَار / أُنِيرَ", "type": "verb"},
+  {"tense1": "S'enfoncer", "tense2": "غَاصَ / يَغُوصُ / غَوْص / غُصْ / يُغَاص / غِيصَ", "type": "verb"},
+  {"tense1": "Rail", "tense2": "سِكَّة / سِكَك / سِكَّتَان / سِكَكًا / سِكَّتَيْن", "type": "word"},
+  {"tense1": "Lumière", "tense2": "ضَوْء / أَضْوَاء / ضَوْءَان / أَضْوَاءً / ضَوْءَيْن", "type": "word"},
+  {"tense1": "Émettre", "tense2": "بَثَّ / يَبُثُّ / بَثّ / بُثَّ / يُبَثُّ / بُثَّ", "type": "verb"},
+  {"tense1": "Tour", "tense2": "بُرْج / أَبْرَاج / بُرْجَان / أَبْرَاجًا / بُرْجَيْن", "type": "word"},
+  {"tense1": "Onde", "tense2": "مَوْجَة / أَمْوَاج / مَوْجَتَان / أَمْوَاجًا / مَوْجَتَيْن", "type": "word"},
+  {"tense1": "Route", "tense2": "طَرِيق / طُرُق / طَرِيقَان / طُرُقًا / طَرِيقَيْن", "type": "word"},
+  {"tense1": "Renforcer", "tense2": "عَزَّزَ / يُعَزِّزُ / تَعْزِيز / عَزِّزْ / يُعَزَّز / عُزِّزَ", "type": "verb"},
+  {"tense1": "Satiété", "tense2": "شِبَع / أَشْبَاع / شِبَعَان / أَشْبَاعًا / شِبَعَيْن", "type": "word"},
+  {"tense1": "Mémoire", "tense2": "ذَاكِرَة / ذَوَاكِر / ذَاكِرَتَان / ذَوَاكِرَ / ذَاكِرَتَيْن", "type": "word"},
+  {"tense1": "Préserver", "tense2": "وَقَى / يَقِي / وِقَايَة / قِ / يُوقَى / وُقِيَ", "type": "verb"},
+  {"tense1": "Accesible", "tense2": "مُتَوَفِّر / مُتَوَفِّرُون / مُتَوَفِّرَان / مُتَوَفِّرِين / مُتَوَفِّرَيْن", "type": "word"},
+  {"tense1": "Terrifier", "tense2": "رَوَّعَ / يُرَوِّعُ / تَرْوِيع / رَوِّعْ / يُرَوَّع / رُوِّعَ", "type": "verb"},
+  {"tense1": "Cohabiter", "tense2": "تَعَايَشَ / يَتَعَايَشُ / تَعَايُش / تَعَايَشْ / يُتَعَايَش / تُعُويِشَ", "type": "verb"},
+  {"tense1": "Tolérance", "tense2": "تَسَامُح / تَسَامُحَات / تَسَامُحَان / تَسَامُحَاتٍ / تَسَامُحَيْن", "type": "word"},
+  {"tense1": "Religion", "tense2": "دِين / أَدْيَان / دِينَان / أَدْيَانًا / دِينَيْن", "type": "word"},
+  {"tense1": "Copier", "tense2": "نَسَخَ / يَنْسَخُ / نَسْخ / اِنْسَخْ / يُنْسَخ / نُسِخَ", "type": "verb"},
+  {"tense1": "Talent", "tense2": "مَهَارَة / مَهَارَات / مَهَارَتَان / مَهَارَاتٍ / مَهَارَتَيْن", "type": "word"},
+  {"tense1": "Échanger", "tense2": "بَدَّلَ / يُبَدِّلُ / تَبْدِيل / بَدِّلْ / يُبَدَّل / بُدِّلَ", "type": "verb"},
+  {"tense1": "Épaule", "tense2": "كَتِف / أَكْتَاف / كَتِفَان / أَكْتَافًا / كَتِفَيْن", "type": "word"},
+  {"tense1": "Matière (scolaire)", "tense2": "مَادَّة / مَوَادّ / مَادَّتَان / مَوَادَّ / مَادَّتَيْن", "type": "word"},
+  {"tense1": "Interrompre", "tense2": "قَاطَعَ / يُقَاطِعُ / مُقَاطَعَة / قَاطِعْ / يُقَاطَع / قُوطِعَ", "type": "verb"},
+  {"tense1": "Selon", "tense2": "وَفْقًا", "type": "word"},
+  {"tense1": "Jusqu'à", "tense2": "إِلَى حِين", "type": "sentence"},
+  {"tense1": "Commenter", "tense2": "عَلَّقَ / يُعَلِّقُ / تَعْلِيق / عَلِّقْ / يُعَلَّق / عُلِّقَ", "type": "verb"},
+  {"tense1": "Gagner", "tense2": "رَبِحَ / يَرْبَحُ / رِبْح / اِرْبَحْ / يُرْبَح / رُبِحَ", "type": "verb"},
+  {"tense1": "Piscine", "tense2": "مَسْبَح / مَسَابِح / مَسْبَحَان / مَسَابِحَ / مَسْبَحَيْن", "type": "word"},
+  {"tense1": "S'approcher", "tense2": "اِقْتَرَبَ / يَقْتَرِبُ / اِقْتِرَاب / اِقْتَرِبْ / يُقْتَرَب / اُقْتُرِبَ", "type": "verb"},
+  {"tense1": "Planifier", "tense2": "خَطَّطَ / يُخَطِّطُ / تَخْطِيط / خَطِّطْ / يُخَطَّط / خُطِّطَ", "type": "verb"},
+  {"tense1": "Série", "tense2": "مُسَلْسَل / مُسَلْسَلَات / مُسَلْسَلَان / مُسَلْسَلَاتٍ / مُسَلْسَلَيْن", "type": "word"},
+  {"tense1": "Réparer", "tense2": "أَصْلَحَ / يُصْلِحُ / إِصْلَاح / أَصْلِحْ / يُصْلَح / أُصْلِحَ", "type": "verb"},
+  {"tense1": "Maillot de bain", "tense2": "مَلَابِس السِّبَاحَة", "type": "sentence"},
+  {"tense1": "Logique", "tense2": "مَنْطِق / مَنَاطِق / مَنْطِقَان / مَنَاطِقَ / مَنْطِقَيْن", "type": "word"},
+  {"tense1": "Lien", "tense2": "صِلَة / صِلَات / صِلَتَان / صِلَاتٍ / صِلَتَيْن", "type": "word"},
+  {"tense1": "Colonne vertébrale", "tense2": "عَمُود فِقْرِيّ / أَعْمِدَة فِقْرِيَّة / عَمُودَان فِقْرِيَّان / أَعْمِدَةً فِقْرِيَّةً / عَمُودَيْن فِقْرِيَّيْن", "type": "word"},
+  {"tense1": "Automatiquement", "tense2": "تِلْقَائِيًّا", "type": "word"},
+  {"tense1": "Embarrassé", "tense2": "مُحْرَج / مُحْرَجُون / مُحْرَجَان / مُحْرَجِين / مُحْرَجَيْن", "type": "word"},
+  {"tense1": "Cape", "tense2": "عَبَاءَة / عَبَاءَات / عَبَاءَتَان / عَبَاءَاتٍ / عَبَاءَتَيْن", "type": "word"},
+  {"tense1": "Manteau", "tense2": "مِعْطَف / مَعَاطِف / مِعْطَفَان / مَعَاطِفَ / مِعْطَفَيْن", "type": "word"},
+  {"tense1": "Sous-vêtement", "tense2": "مَلَابِس دَاخِلِيَّة", "type": "sentence"},
+  {"tense1": "Beau/charmant", "tense2": "وَسِيم / وُسَمَاء / وَسِيمَان / وُسَمَاءَ / وَسِيمَيْن", "type": "word"},
+  {"tense1": "Moustache", "tense2": "شَارِب / شَوَارِب / شَارِبَان / شَوَارِبَ / شَارِبَيْن", "type": "word"},
+  {"tense1": "Craie", "tense2": "طَبَاشِير / طَبَاشِيرَات / طَبَاشِيرَان / طَبَاشِيرَاتٍ / طَبَاشِيرَيْن", "type": "word"},
+  {"tense1": "S'assoupir", "tense2": "غَفَا / يَغْفُو / غَفْو / اُغْفُ / يُغْفَى / غُفِيَ", "type": "verb"}
 ]
         // French
         const pronouns_french = ["je", "tu", "il", "elle", "nous", "vous", "ils", "elles"];
